# wire_service

./: .env  .gitignore  README.md  package-lock.json  pyproject.toml  schema.graphql  setup.cfg
alembic/: env.py
alembic/versions/: 0f0c28a1aec0_added_cables.py  ac2d3a256c23_initial_db_models.py  ea1aa304183f_added_cable_kind.py
config/: cable_types.json  settings.toml
tests/: area_test.py  cable_test.py  cable_type_test.py  conftest.py  face_test.py  gql_operations.py  outlet_test.py  place_test.py  sample_areas.py  sample_cables.py  sample_faces.py  sample_outlet.py  sample_places.py
wire_service/: __main__.py  app.py  application.py  configuration.py  migration.py  settings.py
wire_service/db_model/: __init__.py  area.py  base.py  basic_ops.py  connection.py  face.py  outlet.py  place.py
wire_service/persistency/: area.py  basic_ops.py  cable_type.py  connection.py  face.py  place.py
wire_service/persistency/model/: area.py  base.py  cable.py  cable_type.py  face.py  outlet.py  place.py
wire_service/service_model/: area.py  cable.py  cable_kind.py  cable_type.py  face.py  mutation.py  outlet.py  outlet_kind.py  place.py  query.py  session_extension.py  wrapper.py
