[tool.poetry]
name = "wire-service"
version = "0.1.0"
description = ""
authors = ["Maik Schöpe <m.schoepe@ccgmbh.de>"]
readme = "README.md"
packages = [{include = "wire_service"}]

[tool.poetry.dependencies]
python = "^3.8"
SQLAlchemy = "^1.4.32"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
isort = "^5.10.1"
mypy = "^0.940"
flake8 = "^4.0.1"
alembic = "^1.7.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
