[tool.poetry]
name = "wire-service"
version = "0.1.0"
description = ""
authors = ["Maik Schöpe <m.schoepe@ccgmbh.de>"]
readme = "README.md"
packages = [{include = "wire_service"}]

[tool.poetry.dependencies]
python = "^3.10"
dynaconf = "^3.1.7"
psycopg2-binary = "^2.9.3"
strawberry-graphql = {extras = ["asgi"], version = "^0.103.9"}
SQLAlchemy = {extras = ["mypy"], version = "^1.4.32"}
uvicorn = {extras = ["standard"], version = "^0.17.6"}
asyncio = "^3.4.3"
PyMySQL = "^1.0.2"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
isort = "^5.10.1"
mypy = "^0.940"
flake8 = "^4.0.1"
alembic = "^1.7.6"
pytest-asyncio = "^0.18.3"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
plugins = "sqlalchemy.ext.mypy.plugin,strawberry.ext.mypy_plugin"
files = "wire_service,alembic"
ignore_missing_imports = true
python_version = "3.10"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = [
    "tests",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:"
]